<?xml version="1.0"?>
<package format="2">
  <name>noah_drivers</name>
  <version>0.0.0</version>
  <description>The noah_drivers package</description>

  <maintainer email="cervetti.g@gmail.com">Gonzalo Cervetti</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>noah_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>noah_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>noah_msgs</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
